add cloning contexts + fix bugs + refactoring